--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,17 @@ body {
 
 button {
   cursor: pointer;
+  border: none;
 }
 
 .header-container {
-  position: fixed;
+  position: sticky;
+  top: 0;
   width: 100%;
   height: 5rem;
   background: transparent;
+  z-index: 1;
+  transition: 0.3s;
 }
 
 .header-content {
@@ -71,60 +75,50 @@ button {
   font-weight: bold;
 }
 
-main .container {
+.container {
   max-width: 1120px;
-  margin: 7rem auto;
+  margin: 32px auto;
 }
 
-
-
-.section-d-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-
-.product-data {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-}
-
-.product-data .heading {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-}
-
-.product-data .heading .title {
-  font-weight: bold;
-  font-size: 40px;
-}
-
-.product-data .subtitle {
-  color: #9C9696;
-  font-size: 14px;
-}
-
-.product-data .product-price {
-  display: block;
-  font-weight: bold;
-  font-size: 40px;
-}
-
-.btn-purchase {
-  border: none;
-
-  background: #FF0000;
-  color: #FFFF;
-  font-weight: bold;
-  padding: 24px 48px;
-}
-
-aside {
+.box-bg-gray {
+  position: absolute;
+  top: 0;
+  right: 0;
   background: #C4C4C4;
+  width: 50%;
+  height: 557px;
 }
 
-aside .product-img {
+.box-bg-gray img {
+  margin: 80px 0;
+}
 
+.product-info .heading {
+  font-size: 40px;
+}
+
+.product-info .description {
+  color: #9C9696;
+  font-weight: bold;
+  width: 300px;
+  margin-top: 16px;
+}
+
+.product-info .price {
+  display: block;
+  font-size: 40px;
+  font-weight: bold;
+  margin: 32px 0;
+}
+
+.product-info .btn-purchase {
+  color: #FFF;
+  background: #FF0000;
+  padding: 24px 48px;
+  font-weight: bold;
+  font-size: 24px;
+}
+
+.scrolled {
+  background: #FFF;
 }
