--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ button {
   margin-top: 128px;
 }
 
-#shop .shop-heading {
+.section-heading {
   margin-bottom: 2rem;
   font-size: 32px;
 }
@@ -176,4 +176,9 @@ button {
   font-weight: bold;
   font-size: 16px;
   border-radius: 0 0 8px 8px;
+}
+
+#about {
+  padding: 48px 0;
+  background: #C4C4C4;
 }
