--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ button {
   top: 0;
   width: 100%;
   height: 5rem;
-  background: transparent;
+  background: #FFFF;
   z-index: 1;
   transition: 0.3s;
 }
